# chessgpt

./: .gitignore  model.py  pyproject.toml  sample.py  train.py
config/: train_stockfish.py
data/stockfish/: main.py  prepare.py
data/stockfish_simulator/src/: main.py
nanogpt/: model.py
